2018-11-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix right shift of literal.

2018-11-15 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/Makefile.in:
	  Include stm8-large in default target for regression tests.
	* src/stm8/gen.c:
	  Improve code generation for wide negation.

2018-11-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsalloc.hpp,
	  .version:
	  A bit of fine-tuning in the aligned Chaitin stack allocator to avoid some inefficiencies from alignment.

2018-11-14 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Fix issues in z80 code generation.
	* src/z80/mappings.i:
	  Consistently use space after comma in asm output.

2018-11-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/oldfmul.c:
	  Fix an issue in code generation for shifts found while experimenting with stack allocation.
	* src/SDCCmem.c,
	  src/SDCCsalloc.hpp,
	  src/stm8/ralloc.c,
	  src/stm8/ralloc2.cc,
	  src/z80/ralloc.c:
	  New stack allocator for stm8: aligned Chaitin.
	* device/lib/_fsmul.c:
	  Improve float multiplication routine a bit.
	* support/regression/tests/bug-2833.c:
	  Disable a new test for ds390 (where it fails).
	* src/stm8/gen.c:
	  More flexible handling of register x in read from pointer.

2018-11-12 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/bug-2834.c:
	  Test for bug #2834.
	* src/SDCCopt.c,
	  support/regression/tests/bug-2833.c:
	  Fix bug #2833 (patch by Noam Preil).
	* src/z80/gen.c:
	  Minor improvements in handling on-stack variables.
	* src/SDCCsalloc.hpp,
	  src/SDCCmem.c,
	  src/SDCCmem.h,
	  src/SDCCralloc.hpp,
	  src/z80/ralloc.c,
	  src/z80/ralloc.h,
	  src/z80/ralloc2.cc:
	  New default stack allocator for z80 and related: aligned Chaitin.
	* src/stm8/ralloc.c,
	  src/stm8/ralloc.h,
	  src/stm8/ralloc2.cc,
	  src/z80/ralloc.h,
	  src/z80/ralloc2.cc:
	  Prepare for new stack allocator for stm8.