@@ -1,3 +1,13 @@
+2018-11-18 Philipp Klaus Krause <pkk AT spth.de>
+
+	* configure.ac,
+	  sdccconf_in.h,
+	  configure,
+	  src/SDCCerr.c,
+	  src/SDCCerr.h,
+	  src/stm8/gen.c:
+	  Provide backtrace on some internal errors.
+
 2018-11-16 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
